# nnja-ai

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  Justfile  LICENCE  Makefile  README.md  mkdocs.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yaml  publish.yaml  release.yaml
docs/: datasets.md  example_notebooks  faq.md  understanding-the-data.md
docs/stylesheets/: brightband.css
example_notebooks/: adpsfc_NC000001_dataset.json  adpsfc_NC000002_dataset.json  adpsfc_NC000007_dataset.json  adpsfc_example.ipynb  adpupa_profile_example.ipynb  amsu_NC021023.json  amsu_dataset.json  basic_dataset_example.ipynb  catalog.json  dataset_overview.ipynb  local_nnja.ipynb  real_data_working_example.ipynb  simple_local_catalog.ipynb
example_notebooks/amsu_data.parquet/OBS_DATE=2020-01-01/: a6d3749324aa4b41aa4c9c716b3b7923-0.parquet
example_notebooks/amsu_data.parquet/OBS_DATE=2020-01-02/: a6d3749324aa4b41aa4c9c716b3b7923-0.parquet
example_notebooks/amsu_data.parquet/OBS_DATE=2020-01-03/: a6d3749324aa4b41aa4c9c716b3b7923-0.parquet
src/nnja/: __init__.py  catalog.py  dataset.py  exceptions.py  io.py  variable.py
src/nnja_ai/: catalog.py  dataset.py  io.py
tests/: test_catalog.py  test_dataset.py  test_io.py  test_package.py  test_variable.py
tests/sample_data/: adpsfc_NC000001_dataset.json  adpsfc_NC000002_dataset.json  adpsfc_NC000007_dataset.json  adpupa_pressure_dataset.json  amsu_dataset.json  catalog.json
