[project]
name = "nnja"
version = "0.1.0"
description = "Find and load data from the Brightband AI-ready mirror of the NOAA NASA Joint Archive (NNJA) of Observations for Earth System Reanalysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fsspec>=2024.10.0",
    "pandas>=2.2.3",
    "parquet>=1.3.1",
    "pyarrow>=18.1.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["nnja"]
package-dir = {"" = "src"}
include-package-data = true

[tool.uv.sources]
nnja = { workspace = true }

[dependency-groups]
dev = [
    "coverage>=7.6.9",
    "mypy>=1.13.0",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
    "ruff>=0.8.2",
]

[project.optional-dependencies]
interactive = [
    "ipykernel",
    "jupyterlab",
    "matplotlib",
]

[tool.ruff]
line-length = 88
indent-width = 4
lint.ignore = []

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = true

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.mypy]
disable_error_code = "import-untyped"
