[project]
name = "nnja"
version = "0.1.1"
description = "Find and load data from the Brightband AI-ready mirror of the NOAA NASA Joint Archive (NNJA) of Observations for Earth System Reanalysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fsspec>=2024.10.0",
    "gcsfs>=2024.10.0",
    "google-auth>=2.36.0",
    "jsonschema>=4.23.0",
    "pandas>=2.2.3",
    "parquet>=1.3.1",
    "pyarrow>=18.1.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["nnja"]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
"nnja" = ["schemas/*.json"]

[tool.uv.sources]
nnja = { workspace = true }

[dependency-groups]
dev = [
    "coverage>=7.6.9",
    "mypy>=1.13.0",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
    "ruff>=0.8.2",
    "nnja[complete]",
    "mkdocs>=1.6.1",
    "mkdocstrings[python]>=0.29.1",
    "mkdocs-autoapi[python]>=0.4.1",
    "mkdocs-material>=9.6.14",
    "python-semantic-release>=10.3.0",
]

[project.optional-dependencies]
interactive = [
    "ipykernel",
    "jupyterlab",
    "matplotlib",
]
dask = [
    "dask[dataframe]>=2024.12.0",
]
polars = [
    "polars>=1.17.1",
]
complete = ["nnja[interactive,dask,polars]"]

[tool.ruff]
line-length = 88
indent-width = 4
lint.ignore = []

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = true

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.mypy]
disable_error_code = "import-untyped"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
dist_path = "dist/"
upload_to_pypi = false
remote = { type="github", url="https://github.com/brightbandtech/nnja-ai" }
commit_author = "semantic-release <semantic-release@python>"
commit_parser = "conventional"
commit_parser_options = { parse_squash_commits="false", parse_merge_commits="true" }
minor_tag = "[minor]"
patch_tag = "[patch]"
major_tag = "[major]"
build_command = """
  uv lock --offline
  git add uv.lock
  uv build
"""
# Only create GitHub releases for the current version, not historical ones
github_release_mode = "latest"
# Ensure assets are only uploaded for the current release, not past ones
upload_assets_for_all_releases = false